<resources>
    <string name="app_name">Score Keeper</string>
    <string name="team_a">Team A</string>
    <string name="score">0</string>
    <string name="touchdown_6">Touchdown +6</string>
    <string name="field_goal_3">field goal +3</string>
    <string name="extra_point_2">extra point +2</string>
    <string name="safety_2">safety +2</string>
    <string name="team_b">Team B</string>
    <string name="reset">reset</string>
    <string name="american_football">American Football</string>
</resources>
