<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@drawable/bg"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="@dimen/teamLinearLayoutWidth"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/marginBottom"
                        android:layout_marginTop="@dimen/marginTop"
                        android:fontFamily="sans-serif-medium"
                        android:gravity="center_horizontal"
                        android:text="@string/team_a"
                        android:textColor="@color/textColor"
                        android:textSize="@dimen/textSize" />

                    <TextView
                        android:id="@+id/team_a_score"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/scoreMarginBottom"
                        android:fontFamily="sans-serif-light"
                        android:gravity="center_horizontal"
                        android:text="@string/score"
                        android:textColor="@color/textColor"
                        android:textSize="@dimen/scoreTextSize" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/ButtonMArginBottom"
                        android:layout_marginLeft="@dimen/buttonMarginLeft"
                        android:layout_marginRight="@dimen/buttonMarginRight"
                        android:onClick="sixPointsTeamA"
                        android:text="@string/touchdown_6" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/ButtonMArginBottom"
                        android:layout_marginLeft="@dimen/buttonMarginLeft"
                        android:layout_marginRight="@dimen/buttonMarginRight"
                        android:onClick="threePointsTeamA"
                        android:text="@string/field_goal_3" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/ButtonMArginBottom"
                        android:layout_marginLeft="@dimen/buttonMarginLeft"
                        android:layout_marginRight="@dimen/buttonMarginRight"
                        android:onClick="twoPointsTeamA"
                        android:text="@string/extra_point_2" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/buttonMarginLeft"
                        android:layout_marginRight="@dimen/buttonMarginRight"
                        android:onClick="twoPointsTeamA"
                        android:text="@string/safety_2" />

                </LinearLayout>

                <View
                    android:layout_width="@dimen/viewWidth"
                    android:layout_height="match_parent"
                    android:background="@color/black">

                </View>

                <LinearLayout
                    android:layout_width="@dimen/teamLinearLayoutWidth"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/marginBottom"
                        android:layout_marginTop="@dimen/marginTop"
                        android:fontFamily="sans-serif-medium"
                        android:gravity="center_horizontal"
                        android:text="@string/team_b"
                        android:textColor="@color/textColor"
                        android:textSize="@dimen/textSize" />

                    <TextView
                        android:id="@+id/team_b_score"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/marginBottom"
                        android:fontFamily="sans-serif-light"
                        android:gravity="center_horizontal"
                        android:text="@string/score"
                        android:textColor="@color/textColor"
                        android:textSize="@dimen/scoreTextSize" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/ButtonMArginBottom"
                        android:layout_marginLeft="@dimen/buttonMarginLeft"
                        android:layout_marginRight="@dimen/buttonMarginRight"
                        android:onClick="sixPointsTeamB"
                        android:text="@string/touchdown_6" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/ButtonMArginBottom"
                        android:layout_marginLeft="@dimen/buttonMarginLeft"
                        android:layout_marginRight="@dimen/buttonMarginRight"
                        android:onClick="threePointsTeamB"
                        android:text="@string/field_goal_3" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/ButtonMArginBottom"
                        android:layout_marginLeft="@dimen/buttonMarginLeft"
                        android:layout_marginRight="@dimen/buttonMarginRight"
                        android:onClick="twoPointsTeamB"
                        android:text="@string/extra_point_2" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/ButtonMArginBottom"
                        android:layout_marginLeft="@dimen/buttonMarginLeft"
                        android:layout_marginRight="@dimen/buttonMarginRight"
                        android:onClick="twoPointsTeamB"
                        android:text="@string/safety_2" />

                </LinearLayout>

            </LinearLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/resetMarginBottom"
                android:background="@color/danger"
                android:onClick="resetScore"
                android:text="@string/reset" />
        </LinearLayout>
    </RelativeLayout>
</ScrollView>